# jamal

./: .gitignore  README.md  SKILL.md  pyproject.toml
.claude/skills/: jamal.md
jamal/: cli.py  compose.py  extract.py  separate.py  visualize.py
scripts/: analyze.sh
